--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "Linters"
     ],
     "activationEvents": [
-        "onCommand:extension.sayHello"
+        "onCommand:extension.sayHello",
+        "onLanguage:javascript"
     ],
     "main": "./extension",
     "contributes": {
