--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "categories": [
         "Linters"
     ],
+    "repository": {
+		"type": "git",
+        "url": "https://github.com/MarianBabic/JSVulnerabilitiesDetector.git"
+	},
     "activationEvents": [
         "onCommand:extension.sayHello",
         "onLanguage:javascript"
