--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-    "typescript.surveys.enabled": false
+    "tslint.enable": true,
+    "typescript.surveys.enabled": false,
+    "typescript.preferences.quoteStyle": "single"
 }
