--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "VisualStudio Code extension which detects security vulnerabilities in JavaScript.",
     "author": "Marian Babic",
     "license": "MIT",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "publisher": "Marian",
     "engines": {
         "vscode": "^1.31.0"
@@ -17,27 +17,45 @@
         "url": "https://github.com/MarianBabic/JSVulnerabilitiesDetector.git"
     },
     "activationEvents": [
-        "onCommand:extension.showTime",
         "onLanguage:javascript"
     ],
-    "main": "./extension",
+    "main": "./client/out/extension",
     "contributes": {
-        "commands": [
-            {
-                "command": "extension.showTime",
-                "title": "Show Time"
+        "configuration": {
+            "type": "object",
+            "title": "Example configuration",
+            "properties": {
+                "languageServerExample.maxNumberOfProblems": {
+                    "scope": "resource",
+                    "type": "number",
+                    "default": 100,
+                    "description": "Controls the maximum number of problems produced by the server."
+                },
+                "languageServerExample.trace.server": {
+                    "scope": "window",
+                    "type": "string",
+                    "enum": [
+                        "off",
+                        "messages",
+                        "verbose"
+                    ],
+                    "default": "off",
+                    "description": "Traces the communication between VS Code and the language server."
+                }
             }
-        ]
+        }
     },
     "scripts": {
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "node ./node_modules/vscode/bin/test"
+        "vscode:prepublish": "cd client && npm run update-vscode && cd .. && npm run compile",
+        "compile": "tsc -b",
+        "watch": "tsc -b -w",
+        "postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
+        "test": "sh ./scripts/e2e.sh"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.21",
-        "eslint": "^4.11.0",
-        "@types/node": "^8.10.25",
-        "@types/mocha": "^2.2.42"
+        "@types/mocha": "^5.2.6",
+        "@types/node": "^11.11.3",
+        "tslint": "^5.14.0",
+        "typescript": "^3.3.3333"
     }
 }
